# Content-Gen

./: .env.example  .gitignore  CHANGES_SUMMARY.md  DATABASE_SETUP_URGENT.md  DEBUGGING_GUIDE.md  DEPLOYMENT.md  GOOGLE_OAUTH_SETUP.md  LOGIN_FIXED.md  OAUTH_QUICK_REFERENCE.md  OAUTH_SETUP_GUIDE.md  QUICK_DEPLOY.md  README.md  SCHEMA_UPDATE_GUIDE.md  SETUP_GUIDE.md  SETUP_INSTRUCTIONS.md  next.config.js  package-lock.json  package.json  start-backend.ps1  start-frontend.ps1  start.bat  start.ps1  start.py  stop.bat  stop.ps1  test.py  test_backend.py  test_setup.py  vercel.json
.github/workflows/: ci.yml
.zencoder/rules/: repo.md
app/: layout.tsx  page.tsx
app/dashboard/: page.tsx
app/history/: page.tsx
app/profile/: page.tsx
backend/: .env.template  Dockerfile  openapi.yaml  pyproject.toml  render.yaml  requirements.txt  start_backend.bat
backend/api/: index.py
backend/backend/: db.py  main.py  supabase_client.py
backend/backend/providers/: __init__.py  custom_model.py  manager.py
backend/backend/routers/: __init__.py  auth.py  debug.py  generate.py  history.py  model.py  reminders.py  users.py
backend/backend/utils/: supabase_jwt.py
backend/tests/: test_health.py
components/: content-generator.tsx  dashboard-layout.tsx  landing-page.tsx  loading-spinner.tsx
frontend/: .env.template  Dockerfile  PROJECT_DOCUMENTATION.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
lib/: openai.ts  prompt-engineering.ts
public/: manifest.json  sw.js
supabase/: fix_user_trigger.sql  schema.sql  sql_schema.sql
types/: index.ts
(+16 files in other folders)
